UPDATE: 1. README 2. set Task dev = go run cmd/app/main.go 3. set env AWS_S3_PATH 4. Upload file with Go Routine and return immediately

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -92,7 +92,7 @@ tasks:
   dev:
     desc: "Start development server"
     cmds:
-      - air
+      - go run cmd/app/main.go
 
   lint:
     desc: "Run linter"
