--- a/config/.env.example
+++ b/config/.env.example
@@ -20,3 +20,4 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_S3_BUCKET_NAME=projectsprint-bucket-public-read
 AWS_REGION=ap-southeast-1
+AWS_S3_PATH=https://projectsprint-bucket-public-read.s3.ap-southeast-1.amazonaws.com/
