--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -25,6 +25,7 @@ tasks:
       - go install go.uber.org/mock/mockgen@latest
       - go install gotest.tools/gotestsum@latest
       - go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
+      - go mod tidy
 
   service:build:
     desc: "Build services"
@@ -100,17 +101,11 @@ tasks:
 
   build:
     desc: "Build binary"
-    cmd: go build -o ./bin/{{.APP_NAME}} ./cmd/app/main.go
-    requires:
-      vars:
-        - APP_NAME
+    cmd: GOOS=linux GOARCH=arm64 go build -o bin/main cmd/app/main.go
 
   start:
     desc: "Start binary"
-    cmd: ./bin/{{.APP_NAME}}
-    requires:
-      vars:
-        - APP_NAME
+    cmd: ./bin/main
 
   test:
     desc: "Run tests"
@@ -122,7 +117,7 @@ tasks:
   test:unit:
     desc: "Run unit tests"
     cmds:
-    - go test -v ./tests/unit/... -race -cover -timeout 30s -count 1
+      - go test -v ./tests/unit/... -race -cover -timeout 30s -count 1
 
   test:specific:
     desc: "Run specific tests. Run task with CLI_ARGS=entity or CLI_ARGS=entity/{repository|service}"
